# ExpressionEvaluator

./: CMakeLists.txt  OPTIMIZATIONS.md  README.md  SUMMARY.md
.devcontainer/: devcontainer.json
benchmark/: CMakeLists.txt  README.MD  chatgpt.cpp  claude.cpp
example/: basic.cpp
include/: enums.h  evaluator.h  filter_structs.h  key.h  parser.h
src/: parser.cpp
test/: test_chatgpt.cpp
